# BrickCreator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  frontend-ef48a0e20c9f84dd.js  frontend-ef48a0e20c9f84dd_bg.wasm  index-fcc9a838c687ee38.css  index.html
frontend/: Cargo.toml  Trunk.toml  build-wasm.sh  build.rs  index.html  index.scss
frontend/src/: brick_view.rs  lib.rs  main.rs
frontend/src/components/: brick.rs  brick_type_view.rs  color_view.rs  mod.rs
frontend/ui/: ApplicationStyle.slint  BrickGlobals.slint  BrickPreview.slint  ContentInput.slint  Sidebar.slint  app.slint
frontend/ui/components/: BaseCard.slint  BaseSelection.slint
frontend/ui/components/items/: BrickTypeItem.slint  ColorItem.slint
frontend/ui/selections/: BrickTypeSelection.slint  ColorSchemeSelection.slint
shared/: Cargo.toml
shared/src/: color.rs  lib.rs  types.rs
shared/src/brick/: base.rs  h0.rs  h1_base.rs  h1_control.rs  h2_base.rs  h2_control.rs  h3_base.rs  mod.rs
