[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slint = "1.15.1"
shared = { path = "../shared" }
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = { version = "0.12.0", features = ["png-format"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlAnchorElement", "Blob", "BlobPropertyBag", "Url"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[build-dependencies]
slint-build = "1.15.1"
